# QRDetector

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
img/: annotations.json  annotations1.json  annotations2.json
include/: JsonParser.hpp  QrDetector.hpp  Util.hpp
src/: JsonParser.cpp  QrDetector.cpp  Util.cpp
