cmake_minimum_required(VERSION 3.20)

project(QrDetector)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "cmake")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/bin.dbg)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/bin.rel)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_CURRENT_SOURCE_DIR}/bin.relwithdbg)

find_package(OpenCV CONFIG REQUIRED)

SET(DIR_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src")
SET(DIR_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include")
file(GLOB_RECURSE HEADERS CONFIGURE_DEPENDS "${DIR_HEADERS}/*.hpp")
file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS "${DIR_SOURCES}/*.cpp")

add_executable(QrDetector main.cpp ${SOURCES})
target_include_directories(QrDetector PUBLIC ${DIR_HEADERS})
target_link_libraries(QrDetector PRIVATE ${OpenCV_LIBS})

